# Crypto2

./: .gitignore  README.md  pyproject.toml
docs/: OUTLINE.md  PHASE_A_EINLEITUNG_UND_RECHERCHE.md  PHASE_B_THEORIE.md  PHASE_C_TECHNIK.md  PHASE_D_INTEGRATION.md  PROJECT_PLAN.md
literature/: sources.bib
presentation/: README.md
src/stateful_signatures/: __init__.py  __main__.py  demo.py  stateful_demo.py
tests/: test_benchmark_stateful.py  test_demo_cli.py  test_stateful_demo.py
