[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "stateful-signatures"
version = "0.1.0"
description = "Seminarprojekt: didaktische Demo zu stateful Signaturen und Zustand (XMSS-Theorie in der Ausarbeitung)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-benchmark>=4.0",
]

[project.scripts]
stateful-demo = "stateful_signatures.demo:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
